Adicionado nova linha na lista

--- a/site_curso_github.html
+++ b/site_curso_github.html
@@ -10,6 +10,7 @@
         <li>Outro texto</li>
         <li>Mais texto, porém mais comprido</li>
         <li>O último texto desta lista</li>
+		<li>Uma alteração de texto</li>
     </ul>
 </body>
 </html>
