Modificação do tema do site para cursos pessoais

--- a/site_curso_github.html
+++ b/site_curso_github.html
@@ -2,15 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Um Curso Qualquer sobre Coisas Aleatórias</title>
+    <title>Cursos de Geoprocessamento</title>
 </head>
 <body>
+<h3>Cursos criados por Fernando B. de Souza</h3>
     <ul>
-        <li>Um texto</li>
-        <li>Outro texto</li>
-        <li>Mais texto, porém mais comprido</li>
-        <li>O último texto desta lista</li>
-		<li>Uma alteração de texto</li>
+        <li><a href="https://go.hotmart.com/Q45751406R" target="_blank">Geoprocessamento para Estudos Ambientais com QGIS</a></li>
+        <li><a href="https://pay.hotmart.com/I10996270Y?checkoutMode=10" target="_blank">Geoprocessamento para Estudos Ambientais usando ArcGIS Desktop</a></li>
+        <li><a href="https://pay.hotmart.com/V13312320K?checkoutMode=10" target="_blank">Mapa de Localização com QGIS 3.4</a></li>
     </ul>
 </body>
 </html>
