Adicionado texto com link sobre o autor.

--- a/site_curso_github.html
+++ b/site_curso_github.html
@@ -11,5 +11,7 @@
         <li><a href="https://pay.hotmart.com/I10996270Y?checkoutMode=10" target="_blank">Geoprocessamento para Estudos Ambientais usando ArcGIS Desktop</a></li>
         <li><a href="https://pay.hotmart.com/V13312320K?checkoutMode=10" target="_blank">Mapa de Localização com QGIS 3.4</a></li>
     </ul>
+<br>
+<p>Por <a href='https://www.linkedin.com/in/fernandobsouza/' target="_blank">Fernando Basquiroto de Souza</a>.</p>
 </body>
 </html>
