Melhorado descrição do autor

--- a/site_curso_github.html
+++ b/site_curso_github.html
@@ -13,5 +13,6 @@
     </ul>
 <br>
 <p>Por <a href='https://www.linkedin.com/in/fernandobsouza/' target="_blank">Fernando Basquiroto de Souza</a>.</p>
+<p>Engenheiro Ambiental com mais de 10 anos de experiência no setor de consultoria para licenciamento ambiental de projetos de mineração. Nestes estudos, atua especificamente nas áreas de geoprocessamento, sensoriamento remoto, hidrologia (recursos hídricos) e pedologia. Hoje atua na gestão de projetos para a implantação de WebGIS.</p>
 </body>
 </html>
